--- a/styles/globals.css
+++ b/styles/globals.css
@@ -4,8 +4,18 @@
 
 @layer components {
   #__next {
-    @apply h-screen bg-indigo-800 dark:bg-gray-800;
+    @apply min-h-screen max-h-fit bg-indigo-800 dark:bg-gray-800;
   }
+
+  ::-webkit-scrollbar {
+    width: 10px;
+    background: transparent;
+  }
+
+  ::-webkit-scrollbar-thumb {
+    @apply bg-blue-500 dark:bg-gray-500 h-1 w-1 rounded-lg;
+  }
+
 }
 
 html,
