--- a/styles/globals.css
+++ b/styles/globals.css
@@ -8,8 +8,7 @@
   }
 
   ::-webkit-scrollbar {
-    width: 10px;
-    background: transparent;
+    @apply bg-transparent w-1
   }
 
   ::-webkit-scrollbar-thumb {
